clusters/cl01tl/manifests/postfix/Service-postfix.yaml
apiVersion: v1
kind: Service
metadata:
  name: postfix
  labels:
    app.kubernetes.io/instance: postfix
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postfix
    app.kubernetes.io/service: postfix
    helm.sh/chart: postfix-5.2.1
  namespace: postfix
spec:
  type: ClusterIP
  ports:
    - port: 25
      targetPort: 587
      protocol: TCP
      name: smtp
    - port: 587
      targetPort: 587
      protocol: TCP
      name: submission
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: postfix
    app.kubernetes.io/name: postfix
