clusters/cl01tl/manifests/postfix/NetworkPolicy-postfix.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postfix
  namespace: postfix
  labels:
    app.kubernetes.io/name: postfix
    app.kubernetes.io/instance: postfix
    app.kubernetes.io/part-of: postfix
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postfix
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: audiobookshelf
          podSelector:
            matchLabels:
              app.kubernetes.io/name: audiobookshelf
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grimmory
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grimmory
      ports:
        - protocol: TCP
          port: 25
        - protocol: TCP
          port: 587
